Bug 147586 - FILEOPEN PPTX: bullet points in list appear black instead of blue (style issue?)
Summary: FILEOPEN PPTX: bullet points in list appear black instead of blue (style issue?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks:
 
Reported: 2022-02-22 10:02 UTC by Gerald Pfeifer
Modified: 2022-04-27 12:14 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample slide (PPTX) (686.81 KB, application/vnd.ms-powerpoint)
2022-02-22 10:02 UTC, Gerald Pfeifer
Details
Visual comparison Office 365 (left) vs LibreOffice 7.4 (right) (31.58 KB, image/png)
2022-02-22 10:04 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-02-22 10:02:36 UTC
Created attachment 178454 [details]
Sample slide (PPTX)

Open the attached sample slide and observe how the bullet points render
blue in Office 365 and black in LibreOffice.

Observed with current head

  Version: 7.4.0.0.alpha0+ / LibreOffice Community
  Build ID: 522bde9470bbb321813fa5f1ca8e3c2ebb1bb5cc
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

but goes back all the way until 6.4 at least.


(Note I had to work hard to reduce the test case, but saved from
Office 365 and verified it opens on both; ignore the missing images.)
Comment 1 Gerald Pfeifer 2022-02-22 10:04:06 UTC
Created attachment 178455 [details]
Visual comparison Office 365 (left) vs LibreOffice 7.4 (right)
Comment 2 Xisco Faulí 2022-02-22 10:14:07 UTC
Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 0723b41bed9bb4ad50d2993744a60177966d1a21
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 3 Xisco Faulí 2022-02-22 10:15:55 UTC
Not reproduced in

Version: 5.2.0.4
Build ID: 066b007f5ebcc236395c7d282ba488bca6720265
CPU Threads: 8; OS Version: Linux 5.10; UI Render: default; 
Locale: en-US (es_ES.UTF-8)
Comment 4 Timur 2022-03-23 14:16:13 UTC
5.4: 1b0d5e879d2e04fb93fcb229bf95f2af6066c5d6 is the first bad commit
Date:   Wed Feb 8 00:57:16 2017 +0100
    source 3770a6a3f3bd3e9c3f71a346b9db895e5bf0df31
    prev 985e93ecb44aef97995099d4fd5915afd3cab282
author	Muthu Subramanian <muthusuba@gmail.com>	2016-10-30 (not active since)
tdf#103477 buClrTx => use text color instead (instead of Automatic)
Comment 5 Xisco Faulí 2022-04-25 18:30:50 UTC
i think I know how to fix it
Comment 6 Commit Notification 2022-04-26 06:51:35 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a0bae88a9cd47185a71cbfd4c86bbd86ae44d30e

tdf#147586: Initialize mbBulletColorFollowText to false

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Timur 2022-04-26 08:56:40 UTC
PPT was already OK with blue.
Comment 8 Commit Notification 2022-04-26 15:43:54 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/74a42203fc1f90726cf1219139df5c00e6978914

tdf#147586: Initialize mbBulletColorFollowText to false

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Gerald Pfeifer 2022-04-27 12:14:38 UTC
(In reply to Xisco Faulí from comment #5)
> i think I know how to fix it

You did. :-)  Happy to validate this as the original reporter

  Version: 7.4.0.0.alpha0+ / LibreOffice Community
  Build ID: 5453f75a1e682992f3a725781bb563b8cc76cf1b
  CPU threads: 8; OS: Linux 5.17; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Thank you, Xisco!