tdf#147586: Initialize mbBulletColorFollowText to false

Otherwise, once it's set to true, it's never reset

Change-Id: Ie8a752da4162775f40c2f84f480e6a103eb55942
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133422
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit a0bae88a9cd47185a71cbfd4c86bbd86ae44d30e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133404
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>